# worldweaver

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.claude/: launch.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: brush.rs  mod.rs  terrain.rs  viewport.rs
src-tauri/src/renderer/: brush_gpu.rs  context.rs  mod.rs  pipelines.rs  textures.rs  undo_gpu.rs  viewport.rs
src-tauri/src/renderer/shaders/: brush_erode.wgsl  brush_flatten.wgsl  brush_noise.wgsl  brush_raise.wgsl  brush_smooth.wgsl  terrain.wgsl
src-tauri/src/terrain/: biomes.rs  config.rs  erosion.rs  hydrology.rs  mod.rs  noise_gen.rs  persistence.rs  volcanoes.rs
src/lib/components/: BrushPanel.svelte  FilePanel.svelte  GeneratePanel.svelte  ToolBar.svelte
src/lib/stores/: terrain.svelte.ts  terrain.ts
src/routes/: +layout.ts  +page.svelte
